Fixed project image sizing on smaller screens

--- a/queries.css
+++ b/queries.css
@@ -69,16 +69,18 @@ html {
     border-radius: 0;
     margin: 0;
   }
-  .tech-stack-item{
+  .tech-stack-item {
     padding: 0;
     margin: 0;
   }
-  .tech-text-div{
+  .tech-text-div {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 1rem
+    gap: 1rem;
   }
   .project_img {
     min-width: 100%;
+    min-height: 20rem;
+    
   }
 }
